--- a/js/template.ejs
+++ b/js/template.ejs
@@ -1,4 +1,4 @@
-<div class="col-lg-6">
+<!-- <div class="col-lg-6">
   <div class="card" style="">
     <div class="row no-gutters">
       <div class="col-md-4">
@@ -13,4 +13,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
